--- a/public/sass/components/_info-boxes.scss
+++ b/public/sass/components/_info-boxes.scss
@@ -78,7 +78,7 @@
 .info-box.with-icon p:before{
 	float: left;
 	content: '\f05a';
-	color: #5bc0de;
+	color: red;
 	font-family: "Font Awesome 5 Free";
 	font-size: 2rem;
 	font-weight: 900;
