--- a/public/sass/demo/_demo-base.scss
+++ b/public/sass/demo/_demo-base.scss
@@ -1148,7 +1148,30 @@ body {
     .product-countdown-container {
         padding: 1rem 1rem 1.1rem;
     }
+    
 }
+
+ // mobile screen
+ @media (max-width: 480) {
+    .product-default {
+        .product-details{
+            .price-box{
+                .omr{
+                    font-size: 10px;
+                }
+                .product-price{
+                    font-size: 14px;
+                }
+                .old-price{
+                    font-size: 12px;
+                }
+                
+
+            }
+        }
+        
+    }
+ }
 
 .product-default:not(.product-widget) {
     height: 100%;
@@ -1160,7 +1183,7 @@ body {
 
 .product-details {
     position: relative;
-    margin: 1.5rem 1.5rem 4px;
+    margin: 1rem 1rem 4px;
 }
 
 .product-price {
