--- a/public/sass/pages/_login.scss
+++ b/public/sass/pages/_login.scss
@@ -187,7 +187,7 @@ gap: 20px
             padding: 0 25px;
         }
         .custom_headlog{
-            margin-top: 115px;
+            margin-top: 15px
         }
 
         .custom-loginleft{
