--- a/public/sass/demo/_demo-home.scss
+++ b/public/sass/demo/_demo-home.scss
@@ -2117,9 +2117,9 @@ color:red
         object-fit: contain;
         width: 100%;
         height: 100%;
-        // margin-bottom: 20px;
-        margin-top: -33px;
-        margin-bottom: 66px;
+        padding-bottom: 20px;
+        // margin-top: -33px;
+        // margin-bottom: 66px;
     }
     .home_banner3{
         display: none;
