--- a/public/sass/demo/_demo-custom.scss
+++ b/public/sass/demo/_demo-custom.scss
@@ -234,6 +234,7 @@ span.toggle {
   line-height: 32px;
   text-indent: 0;
   transition: all 0.3s;
+  cursor: pointer;
 }
 
 .btn-address-edit:hover {
