--- a/public/sass/pages/product-pages/_product-page.scss
+++ b/public/sass/pages/product-pages/_product-page.scss
@@ -754,6 +754,8 @@ main .sticky-header {
 
 		&.disabled {
 			cursor: not-allowed;
+			pointer-events: none;
+			
 
 			a {
 				pointer-events: none;
