--- a/public/sass/components/_product.scss
+++ b/public/sass/components/_product.scss
@@ -519,9 +519,9 @@ line-height: 15px;
 .price-box {
     margin-bottom: 1.9rem;
 	font-weight: 700;
-	// font-family: Plus Jakarta Sans !important ;
+	font-family: Plus Jakarta Sans !important ;
     color: #606060;
-	// font-family: $font-family;
+	// font-family: $font-family;-0.1px
 	line-height: 1;
 }
 
