--- a/public/sass/demo/_demo-home.scss
+++ b/public/sass/demo/_demo-home.scss
@@ -541,8 +541,8 @@ hr {
 }
 .bannerimg{
     width: 100%;
-    height: 470px;
-     object-fit: cover;
+    // height: 470px;
+    //  object-fit: cover;
 }
 .home_banner3{
     width: 100%;
