--- a/public/sass/demo/_demo-home.scss
+++ b/public/sass/demo/_demo-home.scss
@@ -274,9 +274,9 @@ hr {
         margin: 1px 0;
     }
 
-    .owl-stage-outer {
-        background: #e7e7e7;
-    }
+    // .owl-stage-outer {
+    //     background: #e7e7e7;
+    // }
 
     .owl-item {
         background-color: #fff;
