--- a/public/sass/base/header/_menu.scss
+++ b/public/sass/base/header/_menu.scss
@@ -683,6 +683,8 @@
 // child menu
 .custom__menufirstchild {
   display: flex;
+  justify-content: left;
+  flex-wrap: wrap;
   padding-bottom: 28px;
   border-bottom: 1px solid rgba(240, 240, 240, 1);
   cursor: pointer;
