--- a/public/sass/base/header/_menu.scss
+++ b/public/sass/base/header/_menu.scss
@@ -761,6 +761,7 @@
 }
 .custom__menulastchild {
   display: flex;
+  flex-wrap: wrap;
   justify-content: left;
   gap: 10px;
   padding-bottom: 28px;
