--- a/public/sass/pages/_checkout.scss
+++ b/public/sass/pages/_checkout.scss
@@ -787,10 +787,10 @@ input[type="radio"]{
 .order-box{
 	margin-left: 0;
 }
-.checkout-steps{
-	padding-left: 10px;
-	padding-right: 10px;
-}
+// .checkout-steps{
+// 	padding-left: 10px; 
+// 	padding-right: 10px;
+// }
 }
 @media(max-width: 576px) {
 	.checkout-container .order-summary {
@@ -805,6 +805,13 @@ input[type="radio"]{
 
   
 }
+@media (max-width:768px) {
+	.checkout-progress-bar {
+		margin-bottom: 3.4rem;
+		
+	}
+}
+
 
 @media (max-width:480px) {
 	.checkout-progress-bar {
