home page pro section style bug fixed

--- a/public/sass/base/_base.scss
+++ b/public/sass/base/_base.scss
@@ -333,3 +333,19 @@ input::-webkit-outer-spin-button,input::-webkit-inner-spin-button {
 		overflow-x: hidden;
 	}
 }
+
+
+@media(max-width:769px){
+
+	.skeleton-body{
+
+		   margin-top: 0px !important; 
+	}
+
+	.banner-2img-main{
+
+		  margin-right: 0px !important;
+	}
+}
+
+
