--- a/public/sass/pages/_success.scss
+++ b/public/sass/pages/_success.scss
@@ -1,5 +1,4 @@
-
-.container > .centered-content {
+.container>.centered-content {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,49 +10,49 @@
     margin-bottom: 134px;
 }
 
-.container > .centered-content > img {
+.container>.centered-content>img {
     max-width: 100%;
 }
 
-.container > .centered-content > h4 {
+.container>.centered-content>h4 {
     margin: 0;
 }
 
-.container > .centered-content > span {
+.container>.centered-content>span {
     font-weight: 400;
-    font-size: 14px; 
+    font-size: 14px;
 }
 
-.container > .centered-content > .buttons {
+.container>.centered-content>.buttons {
     display: flex;
     gap: 20px;
     justify-content: center;
     margin-top: 20px;
 }
 
-.container > .centered-content > .buttons > button {
+.container>.centered-content>.buttons>button {
     min-width: 250px;
     height: 50px;
-    font-size: 16px; 
+    font-size: 16px;
     border: none;
     cursor: pointer;
 }
 
-.container > .centered-content > .buttons > button:first-child {
+.container>.centered-content>.buttons>button:first-child {
     background-color: #FFFFFF;
     color: #000000;
-    border: 1px solid ;
+    border: 1px solid;
 }
 
-.container > .centered-content > .buttons > button:last-child {
+.container>.centered-content>.buttons>button:last-child {
     background-color: #000000;
     color: #FFFFFF;
 }
 
 /* Responsive Styles */
 @media screen and (max-width: 768px) {
-    .container > .centered-content > span {
-        font-size: 12px; 
+    .container>.centered-content>span {
+        font-size: 12px;
     }
 
     // .container > .centered-content > .buttons > button {
@@ -71,23 +70,24 @@
     }
 }
 
-.head-card{
-    width: calc(50% - 20px); 
-    margin-bottom:-17px ;
+.head-card {
+    width: calc(50% - 20px);
+    margin-bottom: -17px;
 }
+
 .cards-container {
     display: flex;
     justify-content: space-around;
     padding: 20px;
     box-sizing: border-box;
-   
+
 }
 
 .card {
     background-color: #FFFFFF;
     border-radius: 8px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    width: calc(50% - 20px); 
+    width: calc(50% - 20px);
     padding: 20px;
     box-sizing: border-box;
     margin-bottom: 20px;
@@ -129,8 +129,8 @@
 
 /* Responsive Styles */
 @media screen and (max-width: 768px) {
-    .container > .centered-content > span {
-        font-size: 12px; 
+    .container>.centered-content>span {
+        font-size: 12px;
     }
 
     // .container > .centered-content > .buttons > button {
@@ -141,47 +141,68 @@
     .cards-container {
         flex-direction: column;
         align-items: center;
-      
+
     }
 
     .card {
         width: calc(100% - 20px);
         flex-direction: column;
         gap: 10px;
-        
+
     }
 
-    .head-card{
+    .head-card {
         // flex-direction: column;
         display: none;
-        
+
     }
 }
 
 
 @media screen and (max-width:480px) {
-    .container > .centered-content > .buttons > button {
+    .container>.centered-content>.buttons>button {
         min-width: auto;
         width: 80%;
     }
-    .container > .centered-content {
+
+    .container>.centered-content {
         margin-bottom: 90px;
     }
 }
 
 .hoverbtn:hover {
-   
-    background-color:#E30613; 
-    color: #ffffff; 
-    border-color: #E30613; 
-  }
 
-  .hoverinto {
-        background-color: #ffffff;
-        color: black;
-  }
-  .hoverinto:hover{
-background-color:#E30613; 
-    color: #ffffff; 
-    border-color: #E30613; 
-  }
+    background-color: #E30613;
+    color: #ffffff;
+    border-color: #E30613;
+}
+
+.hoverinto {
+    background-color: #ffffff;
+    color: black;
+}
+
+.hoverinto:hover {
+    background-color: #E30613;
+    color: #ffffff;
+    border-color: #E30613;
+}
+
+
+.thanks-card-p {
+
+
+    margin-left: 50px;
+}
+
+
+
+
+@media(max-width:500px) {
+
+    .thanks-card-p {
+
+
+        margin-left: 35px;
+    }
+}
