change account/404/order/checkout pages

--- a/public/sass/pages/_cart.scss
+++ b/public/sass/pages/_cart.scss
@@ -121,6 +121,17 @@
 	}
 }
 
+@media (max-width:480px) {
+	.table.table-cart, .table.table-wishlist {
+		
+		.product-title {
+			text-align: center;
+
+		}
+	
+	}
+}
+
 .table.table-cart {
 	.product-title a,
 	.subtotal-price {
