--- a/public/sass/components/_breadcrumb.scss
+++ b/public/sass/components/_breadcrumb.scss
@@ -47,19 +47,19 @@
 
 .breadcrumb {
     margin-bottom: 0;
-    padding: 2.5rem 0 0 0;
+    padding: 2.5rem 0 1rem 0;
     border-radius: 0;
     background-color: transparent;
 }
 @media (max-width: 768px) {
     .breadcrumb {
-        padding: 4rem 0 0 0;
+        padding: 4rem 0 1rem 0;
     }
 }
 
 @media (max-width: 576px) {
     .breadcrumb {
-        padding: 8rem 0 0 0;
+        padding: 8rem 0 1rem 0;
     }
 }
 
