--- a/public/sass/pages/product-pages/_product-page.scss
+++ b/public/sass/pages/product-pages/_product-page.scss
@@ -500,7 +500,7 @@ gap: 10px;
 	}
 
 	.product-desc {
-		margin-bottom: 4.8rem;
+		margin-bottom: 2.8rem;
 		font-size: 1.6rem;
 		letter-spacing: -.015em;
 		line-height: 1.6875;
@@ -905,6 +905,8 @@ main .sticky-header {
 		}
 	}
 }
+
+
 
 // 3. Product Single Gallery
 
@@ -1810,9 +1812,9 @@ line-height: 2.375rem;
 	}
 }
 
-@media (max-width: 800px){
+@media (max-width: 500px){
 .product-single-details {
-	margin-top: 114px;
+	margin-top: 60px;
 }
 }
 
@@ -2010,4 +2012,15 @@ line-height: 2.375rem;
 			}
 		}
 	}
-}  
+}
+
+
+@media(max-width:500px){
+
+	.product-single-share{
+
+		margin-top: 3.7rem;
+	}
+}
+
+
