--- a/public/sass/pages/_checkout.scss
+++ b/public/sass/pages/_checkout.scss
@@ -819,3 +819,12 @@ input[type="radio"]{
 		// margin-top: 6.4rem;
 	}
 }
+
+
+@media(max-width:769px){
+
+	.step-title{
+
+		padding-left:15px;
+	}
+}
