--- a/public/sass/pages/_cart.scss
+++ b/public/sass/pages/_cart.scss
@@ -588,12 +588,12 @@ i.cart-empty {
 
 	 .cart-container{
 
-		padding-left:40px;
+		// padding-left:40px;
 		margin-top: 30px !important;
 	 }
 
-	 .cart-price-box{
+	//  .cart-price-box{
 
-		   margin-right: 30px;
-	 }
+	// 	   margin-right: 30px;
+	//  }
 }
