--- a/public/sass/pages/_success.scss
+++ b/public/sass/pages/_success.scss
@@ -78,7 +78,7 @@
 .cards-container {
     display: flex;
     justify-content: space-around;
-    padding: 20px;
+    // padding: 20px;
     box-sizing: border-box;
 
 }
@@ -203,6 +203,6 @@
     .thanks-card-p {
 
 
-        margin-left: 35px;
+        margin-left: 50px;
     }
 }
