product padding fix

--- a/public/sass/components/_pagination.scss
+++ b/public/sass/components/_pagination.scss
@@ -18,6 +18,13 @@ $p-pagination-color: #706f6c !default;
 $p-pagination-font-size: 15px !default;
 $p-pagination-font-weight: 700 !default;
 
+// .no-padding{
+// 	padding: 0px;
+//   }
+//   .no-margin{
+// 	  margin: 0px;
+//   }
+
 // 1. Toolbox
 
 // 1.1) Toolbox Base
